--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   introduction_screen:
   flutter_dialogflow: ^0.1.3
   hexcolor: ^1.0.4
-  flutter_launcher_icons: ^0.7.3
+  flutter_launcher_icons: "^0.8.0"
   firebase_auth: ^0.16.1
   page_transition: "^1.1.6"
   google_sign_in: ^4.1.1
@@ -56,13 +56,18 @@ dependencies:
   fluttertoast: ^7.0.1+14
   share: ^0.6.5+4
   like_button: ^1.0.4
+  custom_splash: ^0.0.2
   intl:
   percent_indicator: ^2.1.7+4
   flutter_staggered_grid_view: ^0.3.2
 
 dev_dependencies:
-  flutter_test:
+   flutter_test:
     sdk: flutter
+flutter_icons:    
+ android: "launcher_icon"    
+ ios: true    
+ image_path: "assets/Logo.jpeg" 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
